fixed image dim bug in vol_regrid

--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -13,7 +13,7 @@ local_dest_root  /WeatherShare/storm_archive_2/
 %
 s3_dest_root     s3://roames-wxradar-archive/storm_archive_2/
 %
-realtime_flag    1
+realtime_flag    0
 %description: controls process mode:
 %Realtime:   uses staging index (.h5), realtime GFS forecast temp data and loops
 %Historical: extracts list from odimh5_ddb (.h5), uses ERA-Intrim data and does not loop
@@ -24,14 +24,14 @@ realtime_offset  -1
 %
 %CLIMATOLOGY ANALYSIS DATES
 %
-hist_oldest      2015_10_27
+hist_oldest      2003_08_25
 %yyyy_mm_dd : oldest time to process
-hist_newest      2015_10_27
+hist_newest      2003_08_25
 %yyyy_mm_dd : newest time to process
 %
 %SITE
 %
-radar_id_list           all
+radar_id_list           3
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
