restart tried implemented

--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -8,11 +8,11 @@ s3_dest_root             s3://roames-wxradar-kml/kml_demo/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_demo/
 %
 % REALTIME OPTIONS
-realtime_kml             0
+realtime_kml             1
 realtime_length          -1          %hours
 %
 % RESTART OPTIONS
-save_object_struct       0     %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
+save_object_struct       1     %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
 %
 %FILE STRUCTURE OPTIONS
 overlays_path            overlays/
@@ -28,7 +28,7 @@ hist_newest              2015-10-27T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           [28,50]
+radar_id_list           all
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
@@ -67,7 +67,8 @@ options               [1,0,0,0,1,1,1,1,0,1]
 %
 % ERROR NOTIFICATION
 %
-pushover_flag   1
+pushover_flag     1
+max_restart_tries 3
 %Entry (8) tracks path kml object
 %Entry (9) swaths kml object
 %Entry (10) nowcast swaths kml objects
