restart tried implemented

--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -40,5 +40,6 @@ force_transform_update  0         %flag to force transform regeneration
 %Option (3)    vector
 %
 % ERROR NOTIFICATION
-pushover_flag   1
-pushover_tag    Sydney_Climatology
+pushover_flag     1
+pushover_tag      Sydney_Climatology
+max_restart_tries 3
