thresholding bug in collada fixed

--- a/etc/global.config
+++ b/etc/global.config
@@ -34,6 +34,7 @@ min_n_groups            4          %minimum number of groups in a h5 file to con
 %
 %ISOSURFACE OPTIONS
 smallest_no_faces      6           %lowest number of faces for an isosurface
+min_voxels             3           %minimum number of grid voxels for isosurface
 outer_iso_faces        2000        %maximum total number of face for the outer_iso
 inner_iso_faces        2000        %maximum number of total faces for an inner iso object
 inner_iso_percentile   95          %percentile pf dBZ for inner isosurface
