patches to fix various crashes

--- a/opt/qc_odimh5/config
+++ b/opt/qc_odimh5/config
@@ -1,9 +1,9 @@
 %qc_odimh5 CONFIG FILE
 %
 %
-year_start     2015
+year_start     2007
 year_stop      2015
-radar_id       66
+radar_id       all
 duplicate_flag 1
-rename_flag    1
-ddb_flag       1
+rename_flag    0
+ddb_flag       0
