--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -24,14 +24,14 @@ realtime_offset  -1
 %
 %CLIMATOLOGY ANALYSIS DATES
 %
-hist_oldest      2005_10_03
+hist_oldest      1999_01_01
 %yyyy_mm_dd : oldest time to process
 hist_newest      2010_12_31
 %yyyy_mm_dd : newest time to process
 %
 %SITE
 %
-radar_id_list           3
+radar_id_list           03
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
@@ -41,5 +41,5 @@ force_transform_update  0         %flag to force transform regeneration
 %
 % ERROR NOTIFICATION
 pushover_flag     1
-pushover_tag      Sydney_Climatology
+pushover_tag      Realtime
 max_restart_tries 3
