--- a/rwx_vis/etc/global.config
+++ b/rwx_vis/etc/global.config
@@ -46,7 +46,7 @@ ewt_min_hlevel         2           %Min level search criteria DEFAULT 5
 ewt_a                  35          %Quantisation refl lower bound (dbz)
 ewt_b                  60          %Quantisation refl upper bound (dbz)
 ewt_del                1           %Quantisation refl scaling 
-ewt_saliency           50          %min areal extent threshold (km) DEFAULT 20, was 15
+ewt_saliency           100         %min areal extent threshold (km) DEFAULT 20, was 15
 ewt_kernel_size        3           %smoothing kernel (pixels)
 ewt_max_depth          10          %maximum hlevel depth search (units of Q) DEFAULT 10
 ewt_refl_h             4           %level to extract refl data from vol (h index)
@@ -58,20 +58,17 @@ vil_upper_limit        55          %upper limit for vil calculatations (dBZ), ne
 min_track_cells       3           %minimum of unique cells for kml track generation (min 2)
 min_track_len         2           %minimum track history used for projecting centroid in wdss_tracking
 min_other_track_cells 3           %minimum number of other tracked cells which can be used to generate a proj track for a cell with no history
-max_track_len         4           %maximum track history used for projecting centroid in wdss_tracking
-max_storm_speed       80          %NOT CURRENTLY USED maximum speed of a storm, used to check tracking cell search radius (km/h)
-max_search_distance   13.5        %maximum tracking search radius from cell centroid (km)
+max_track_len         8           %maximum track history used for projecting centroid in wdss_tracking
+max_storm_speed       75          %maximum speed of a storm, used to check tracking cell search radius (km/h)
+max_search_distance   13.5        %max search radius for cell tracking (km)
 azi_diff              60          %maximum allowable difference between the proj_azi and the tracked azi (deg)
 %
 %FORECASTING OPTIONS
-track_merge_t_offset   15         %the max time offset from the start/end of a day to find start/end cells for merging
-oldest_end_cell       -20         %oldest end cell a forecast will be generated for in minutes (offset from kml.m stop_td)
 fcst_step             5           %length of steps in minutes
 n_fcst_steps          6           %number of forecast steps
 min_fcst_cells        3           %minimum of unique cells for forecast generation
 max_hist_cells        4           %maximum number of previous timesteps from history to use for forecast generation
-nowcast_growth        1.05        %growth rate of nowcast ellipses
-axis_scaling          1           %nowcast axis scaling  
+radar_mask_time       11          %minutes either side of a PPI scan to search for overlapping radars
 %
 %DATE FORMAT OPTIONS
 r_tfmt                yyyymmdd_HHMMSS            %s3 database date format
