--- a/etc/global.config
+++ b/etc/global.config
@@ -79,10 +79,10 @@ ddb_dateid_tfmt       ddmmyyyy                   %ddb date_id format for storm o
 %GLOBAL SCALING FACTOR
 r_scale               10                        %number to divide radar data objects (dbz,mesh,vel,etc)by before rounding
 %dynamodb table name
-odimh5_ddb_table      wxradar_odimh5_index_2
-storm_ddb_table       wxradar_storm_index_2
+odimh5_ddb_table      wxradar_odimh5_index
+storm_ddb_table       wxradar_stormh5_index
 eraint_ddb_table      wxradar-eraint-fzlvl
 clean_stormobj_index  0                         %checks stormobj_index for sort_ids and removed these entries
-staging_ddb_table     wxradar_realtime_staging_2
+staging_ddb_table     wxradar_realtime_staging
 %pushover
 pushover_flag         1
