--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -22,13 +22,13 @@ cell_obj_path            cell_obj/
 download_path            /tmp/vis_h5_download/
 %
 % HISTORICAL OPTIOS
-hist_oldest              2015-10-27T05:00:00
+hist_oldest              2017-02-13T06:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest              2015-10-27T06:00:00
+hist_newest              2017-02-13T06:30:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           50
+radar_id_list           [08,28,50,66]
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
