found and removed bug in storm domain masking write to ddb

--- a/etc/global.config
+++ b/etc/global.config
@@ -62,6 +62,7 @@ max_track_len         8           %maximum track history used for projecting cen
 max_storm_speed       75          %maximum speed of a storm, used to check tracking cell search radius (km/h)
 max_search_distance   13.5        %max search radius for cell tracking (km)
 azi_diff              60          %maximum allowable difference between the proj_azi and the tracked azi (deg)
+other_track_dist      150         %for case using other tracks to predict path of new cell, sets the maximum search radius for other tracks (km)
 %
 %FORECASTING OPTIONS
 fcst_step             5           %length of steps in minutes
