restructured kml to simplify processing and remove corruption

--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -8,11 +8,11 @@ s3_dest_root             s3://roames-wxradar-kml/kml_realtime/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
 % REALTIME OPTIONS
-realtime_kml             1
+realtime_kml             0
 realtime_length          -1          %hours
 %
 % RESTART OPTIONS
-save_object_struct       1     %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
+save_object_struct       0     %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
 %
 %FILE STRUCTURE OPTIONS
 overlays_path            overlays/
@@ -22,13 +22,13 @@ cell_obj_path            cell_obj/
 download_path            /tmp/vis_h5_download/
 %
 % HISTORICAL OPTIOS
-hist_oldest              2017-02-14T05:00:00
+hist_oldest              2015-12-03T05:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest              2017-02-14T07:00:00
+hist_newest              2015-12-03T07:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           all
+radar_id_list           23
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
@@ -54,7 +54,7 @@ ppi_dbzh_mask         10                %gatemask which is applied to reflectivi
 ppi_resize_scale      3                 %resize factor for ppi images
 %
 % KML LAYER OPTIONS
-%                1 2 3 4 5 6 7 8 9 10
+%                      1 2 3 4 5 6 7 8 9 10
 options               [1,0,0,0,1,1,1,1,0,1]
 %description (T/F):
 %Entry (1)  PPI refl kml layer
