--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -24,20 +24,20 @@ realtime_offset  -1
 %
 %CLIMATOLOGY ANALYSIS DATES
 %
-hist_oldest      1999_01_01
+hist_oldest      2015_10_27
 %yyyy_mm_dd : oldest time to process
-hist_newest      2010_12_31
+hist_newest      2015_10_27
 %yyyy_mm_dd : newest time to process
 %
 %SITE
 %
-radar_id_list           03
+radar_id_list           50
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
 %Option (1)    all: No site selected
 %Option (2)    ##: single number (REQUIRED FOR CLIMATOLOGY)
-%Option (3)    vector
+%Option (3)    [v,e,c,t,o,r]
 %
 % ERROR NOTIFICATION
 pushover_flag     1
