changes to nowcast2archive script

--- a/etc/global.config
+++ b/etc/global.config
@@ -31,7 +31,7 @@ min_vradh               -71        %min vel value to set to transparent
 max_vradh               70         %max of vel values
 min_n_groups            4          %minimum number of groups in a h5 file to contiune pass QA
 %
-%ISOSURFACE OPTIONS
+%VIS OPTIONS
 smallest_no_faces      6           %lowest number of faces for an isosurface
 min_voxels             3           %minimum number of grid voxels for isosurface
 outer_iso_faces        2000        %maximum total number of face for the outer_iso
@@ -40,6 +40,7 @@ inner_iso_percentile   95          %percentile pf dBZ for inner isosurface
 low_res_iso_factor     .25         %low res face reduction factor
 inner_alpha            0           %alpha for inner collada isosurface
 outer_alpha            0.5         %alpha for outer collada isosurface
+min_track_cells        2           %minimum of unique cells for kml track generation (min 2)
 %
 %IDENTIFCATION OPTIONS
 ewt_min_hlevel         2           %Min level search criteria DEFAULT 5
@@ -55,16 +56,15 @@ severe_dbz_thresh      50          %target dbz value for calculating severe dbz 
 vil_upper_limit        55          %upper limit for vil calculatations (dBZ), negates hail spike effects
 %
 %TRACKING OPTIONS
-min_track_cells       3           %minimum of unique cells for kml track generation (min 2)
 min_track_len         2           %minimum track history used for projecting centroid in wdss_tracking
 min_other_track_cells 3           %minimum number of other tracked cells which can be used to generate a proj track for a cell with no history
 max_track_len         8           %maximum track history used for projecting centroid in wdss_tracking
 max_storm_speed       75          %maximum speed of a storm, used to check tracking cell search radius (km/h)
 max_search_distance   13.5        %max search radius for cell tracking (km)
-azi_diff              60          %maximum allowable difference between the proj_azi and the tracked azi (deg)
+azi_diff              75          %maximum allowable difference between the proj_azi and the tracked azi (deg)
 other_track_dist      150         %for case using other tracks to predict path of new cell, sets the maximum search radius for other tracks (km)
 %
-%FORECASTING OPTIONS
+%NOWCASTING VIS OPTIONS
 fcst_step             5           %length of steps in minutes
 n_fcst_steps          6           %number of forecast steps
 min_fcst_cells        3           %minimum of unique cells for forecast generation
