--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -8,7 +8,7 @@ s3_dest_root             s3://roames-wxradar-kml/kml_realtime/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
 %
 % REALTIME OPTIONS
-realtime_kml             0
+realtime_kml             1
 realtime_length          -1          %hours
 %
 % RESTART OPTIONS
@@ -28,7 +28,7 @@ hist_newest              2017-02-18T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           71
+radar_id_list           all
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
