config updates for new buckets

--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -4,15 +4,15 @@
 % DESTINATION OPTIONS
 local_dest_flag          1
 local_dest_root          /home/meso/roames_weather_kml/kml_realtime_testing/
-s3_dest_root             s3://roames-wxradar-kml/kml_realtime/
-s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-wxradar-kml/kml_realtime/
+s3_dest_root             s3://roames-weather-vis/kml_realtime/
+s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_realtime/
 %
 % REALTIME OPTIONS
 realtime_kml             1
 realtime_length          -1          %hours
 %
 % RESTART OPTIONS
-save_object_struct       0     %triggers save of object_struct during realtime processing, if saved file is not present during starting/restarting script, a rebuild of the kml tree will be initated
+save_object_struct       1     %save all objects on soft exit
 %
 %FILE STRUCTURE OPTIONS
 overlays_path            overlays/
