--- a/etc/global.config
+++ b/etc/global.config
@@ -41,6 +41,7 @@ low_res_iso_factor     .25         %low res face reduction factor
 inner_alpha            0           %alpha for inner collada isosurface
 outer_alpha            0.5         %alpha for outer collada isosurface
 min_track_cells        3           %minimum of unique cells for kml track generation (min 2)
+mesh_swath_steps       [15,30,45,60] %contour steps for MESH swath (mm)
 %
 %IDENTIFCATION OPTIONS
 ewt_min_hlevel         2           %Min level search criteria DEFAULT 5
