--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -3,12 +3,12 @@
 %
 % DESTINATION OPTIONS
 local_dest_flag          1
-local_dest_root          /home/meso/roames_weather_kml/kml_realtime_testing/
-s3_dest_root             s3://roames-weather-vis/kml_realtime/
-s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_realtime/
+local_dest_root          /home/meso/roames_weather_kml/kml_testing/
+s3_dest_root             s3://roames-weather-vis/kml_demo/
+s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_demo/
 %
 % REALTIME OPTIONS
-realtime_kml             1
+realtime_kml             0
 realtime_length          -1          %hours
 %
 % RESTART OPTIONS
@@ -21,15 +21,16 @@ ppi_obj_path             ppi_obj/
 track_obj_path           track_obj/
 cell_obj_path            cell_obj/
 download_path            /tmp/vis_h5_download/
+asset_data_fn            tmp/asset_data.mat
 %
 % HISTORICAL OPTIOS
-hist_oldest              2017-02-18T05:00:00
+hist_oldest              2015-10-27T05:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest              2017-02-18T06:00:00
+hist_newest              2015-10-27T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           all
+radar_id_list           50
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
