mesh swaths and placemarks finished

--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -2,8 +2,8 @@
 %WHAT: controls the input parameters of the KML config module
 %
 % DESTINATION OPTIONS
-local_dest_flag          1
-local_dest_root          /home/meso/roames_weather_kml/kml_testing/
+local_dest_flag          0
+local_dest_root          /home/meso/roames_weather_kml/kml_testing_new/
 s3_dest_root             s3://roames-weather-vis/kml_demo/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_demo/
 %
@@ -26,11 +26,11 @@ asset_data_fn            tmp/asset_data.mat
 % HISTORICAL OPTIOS
 hist_oldest              2015-10-27T05:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest              2015-10-27T06:00:00
+hist_newest              2015-10-27T08:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           50
+radar_id_list           66
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
@@ -54,7 +54,7 @@ xsec_alt              [3000,6000]       %xsection altitude in m
 ppi_sweep             3                 %starting from 1st sweep = 1
 ppi_dbzh_mask         10                %gatemask which is applied to reflectivity and velocity PPI images in dBZ
 ppi_resize_scale      3                 %resize factor for ppi images
-swath_mesh_threshold  [15,30,45]        %mesh thresholds for swath generation
+swath_mesh_threshold  [15,30,45]        %mesh thresholds (can be vector) for swath generation
 smallest_no_faces     6                 %lowest number of faces for an isosurface
 min_voxels            3                 %minimum number of grid voxels for isosurface
 outer_iso_faces       2000              %maximum total number of face for the outer_iso
