build clim database

--- a/etc/global.config
+++ b/etc/global.config
@@ -75,7 +75,7 @@ r_scale               10                        %number to divide radar data obj
 %dynamodb table name
 odimh5_ddb_table      wxradar_odimh5_index
 storm_ddb_table       wxradar_stormh5_index
-eraint_ddb_table      wxradar-eraint-fzlvl
+eraint_ddb_table      wxradar_eraint_fzlvl
 clean_stormobj_index  0                         %checks stormobj_index for sort_ids and removed these entries
 staging_ddb_table     wxradar_realtime_staging
 %pushover
