--- a/rwx_clim/database.config
+++ b/rwx_clim/database.config
@@ -1,7 +1,8 @@
-start_year    1999
-end_year      2010
+start_date    1999_01_01
+end_date      2010_12_31
 radar_id      03
 storm_s3      s3://roames-weather-stormh5/stormh5_archive/
 storm_ddb     wxradar_stormh5_index
-local_root    /run/media/meso/DATA/clim_database/
+db_root       /run/media/meso/data/rwx_clim_archive/
+ddb_fields    29
 
