fixed error in database sync and rebuilding climate module

--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -3,19 +3,21 @@
 %climate.m config file
 %
 %---------------------------------------------------------
-radar_id_list  [50]                                            %radar id list for climate analysis
+radar_id       50                                              %radar id for climate analysis
 db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root
 date_start     1997-07-01                                      %start date (yyyy-mm-dd)
-date_end       2015-06-30                                      %end date (yyyy-mm-dd)
+date_stop      2000-06-30                                      %end date (yyyy-mm-dd)
 time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
 time_max       23:59                                           %oldest time in each day to accept a cell (HH:MM)
-month_list     All                                             %list of month numbers
+month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers
+date_list_ffn  data/sb_data/arch_sb_days.mat                   %second date list to filter primary (must contain matlab dates rounded)
+date_list_var  target_days                                     %date_list variable name
 financial_year 1                                               %use finanical years for annual normalisation
 %
-data_type      MESH_grid                                       %data type to use from database, stormh5 fields + direction
+data_type      mesh                                            %data type to use from database, (mesh,dbz,g_vil,tops_h,sts_h)
 stat_type      density                                         %analysis type to build grid from data (max/mean/density/centroid)
 %
-data_min       20                                              %lower limits for filtering cell data (data units, nan for no limit)
+data_min       nan                                             %lower limits for filtering cell data (data units, nan for no limit)
 data_max       nan                                             %upper limit for filtering cell data (data units, nan for no limit)
 min_track      2                                               %minimum number of cells in a track to analyse (n. cells)
 ci_flag        0                                               %flag to only keep centroids for ci events
