--- a/rwx_climate/etc/database.config
+++ b/rwx_climate/etc/database.config
@@ -8,4 +8,5 @@ storm_s3      s3://roames-weather-stormh5/stormh5_archive/    %s3 path to stormh
 storm_ddb     wxradar_stormh5_index                           %ddb name for storm cell data
 db_root       /run/media/meso/data/rwx_clim_archive/          %local path to climate database root
 ddb_fields    29                                              %number of fields in ddb (QC)
+resync_h5     0                                               %force resync of stormh5
 
