minor bugs fixed

--- a/etc/global.config
+++ b/etc/global.config
@@ -12,7 +12,7 @@ radar_mask_rng          300       %km from radar
 %
 %transform constants
 earth_rad               6371      %km
-ke                      4/3       %earth model
+ke                      1.3333333 %earth model
 %
 %signficant refl check
 sig_refl_ppi_no         2         %ppi number for sig refl check
