--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -5,8 +5,8 @@
 %---------------------------------------------------------
 radar_id       50                                              %radar id for climate analysis
 db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root
-date_start     1997-07-01                                      %start date (yyyy-mm-dd)
-date_stop      2000-06-30                                      %end date (yyyy-mm-dd)
+date_start     1997/07/01                                      %start date (yyyy-mm-dd)
+date_stop      2000/06/30                                      %end date (yyyy-mm-dd)
 time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
 time_max       23:59                                           %oldest time in each day to accept a cell (HH:MM)
 month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers
