work on climate

--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -1,6 +1,6 @@
 %---------------------------------------------------------
 %
-%climate.m config file
+%----------climate.m config file
 %
 %---------------------------------------------------------
 radar_id       50                                              %radar id for climate analysis
@@ -13,9 +13,11 @@ month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month nu
 date_list_ffn  data/sb_data/arch_sb_days.mat                   %second date list to filter primary (must contain matlab dates rounded)
 date_list_var  target_days                                     %date_list variable name
 financial_year 1                                               %use finanical years for annual normalisation
+transform_new  0                                               %flag to force transform regeneration
 %
 data_type      mesh                                            %data type to use from database, (mesh,dbz,g_vil,tops_h,sts_h)
-stat_type      density                                         %analysis type to build grid from data (max/mean/density/centroid)
+grid_type      density                                         %analysis type to build grid from data (max/mean/density/centroid)
+dir_grid       0                                               %create seperate track direction grid
 %
 data_min       nan                                             %lower limits for filtering cell data (data units, nan for no limit)
 data_max       nan                                             %upper limit for filtering cell data (data units, nan for no limit)
@@ -23,7 +25,7 @@ min_track      2                                               %minimum number o
 ci_flag        0                                               %flag to only keep centroids for ci events
 ce_flag        0                                               %flag to only keep centroids for ce events
 ce_diff        8                                               %different between tn1 and tn cells for ce event (data units)
-centroid_grid  5000											   %grid size for centroid accumulation (m)
+centroid_grid  0.5											   %grid size for centroid accumulation (degrees)
 annual_flag    1                                               %normalise by number of rain years
 grid_max       nan                                             %max value in output grid (data units, nan for no limit)
 %
