--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -3,32 +3,32 @@
 %----------climate.m config file
 %
 %---------------------------------------------------------
-radar_id       50                                              %radar id for climate analysis
+radar_id       71                                              %radar id for climate analysis
 db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root
 date_start     1997/07/01                                      %start date (yyyy-mm-dd)
-date_stop      2000/06/30                                      %end date (yyyy-mm-dd)
+date_stop      2016/06/30                                      %end date (yyyy-mm-dd)
 time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
 time_max       23:59                                           %oldest time in each day to accept a cell (HH:MM)
 month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers
+date_list_flag 0
 date_list_ffn  data/sb_data/arch_sb_days.mat                   %second date list to filter primary (must contain matlab dates rounded)
 date_list_var  target_days                                     %date_list variable name
 financial_year 1                                               %use finanical years for annual normalisation
 transform_new  0                                               %flag to force transform regeneration
 %
-data_type      mesh                                            %data type to use from database, (mesh,dbz,g_vil,tops_h,sts_h)
-grid_type      density                                         %analysis type to build grid from data (max/mean/density/centroid)
-dir_grid       0                                               %create seperate track direction grid
+data_type      mesh                                            %data type to use from database, (mesh,posh,dbz,g_vil,tops_h,sts_h)
 %
-data_min       nan                                             %lower limits for filtering cell data (data units, nan for no limit)
+data_min       20                                              %lower limits for filtering cell data (data units, nan for no limit)
 data_max       nan                                             %upper limit for filtering cell data (data units, nan for no limit)
-min_track      2                                               %minimum number of cells in a track to analyse (n. cells)
+min_track      2                                               %minimum number of cells in a track to analyse (n. cells), min of 2
 ci_flag        0                                               %flag to only keep centroids for ci events
 ce_flag        0                                               %flag to only keep centroids for ce events
 ce_diff        8                                               %different between tn1 and tn cells for ce event (data units)
-centroid_grid  0.5											   %grid size for centroid accumulation (degrees)
+centroid_grid  0.1											   %grid size for centroid accumulation (degrees)
 annual_flag    1                                               %normalise by number of rain years
 grid_max       nan                                             %max value in output grid (data units, nan for no limit)
 %
+map_config_fn  map.sydney.config
 ge_flag        1                                               %output ge
 geotiff_flag   1                                               %output geotiff
 image_flag     1											   %output image
