implemented track swaths, but slow

--- a/rwx_climate/etc/map.sydney.config
+++ b/rwx_climate/etc/map.sydney.config
@@ -9,10 +9,10 @@
 fig_w                   700
 fig_h                   700
 %
-map_N_lat               -32.7
-map_S_lat               -34.7
-map_E_lon               152.4  
-map_W_lon               150.0
+map_N_lat               -31.5
+map_S_lat               -35.5
+map_E_lon               153.5  
+map_W_lon               148.5
 %  
 lat_label_int           1
 lon_label_int           1
@@ -35,17 +35,17 @@ state_id                1
 %
 draw_topo               1
 topo_ffn                /run/media/meso/DATA/mapping/srtm_67_19_Sydney/srtm_67_19.tif
-topo_filter             0
+topo_filter             1
 topo_filter_sz          500
 topo_resize             1
-topo_scale              0.05
+topo_scale              0.02
 topo_min                200
 topo_step               200
 topo_max                1000
 topo_linewidth          2
 %
 draw_cities             1
-cities_names            {'Brisbane__','Archerfield__'}
+cities_names            {'Sydney','Wollongong'}
 cities_lat              [-27.46,-27.56]
 cities_lon              [153.02,153.00]
 cities_horz_align       {'right','right'}
@@ -54,4 +54,4 @@ cities_fontsize         [14,14]
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-colorbar_label         Hailstorm_(20mm)_10km_Centroid_Density
+colorbar_label         10km_Centroid_Density
