--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -4,9 +4,9 @@
 %
 %---------------------------------------------------------
 radar_id       03                                              %radar id for climate analysis
-db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root
-date_start     1999/04/14                                      %start date (yyyy-mm-dd)
-date_stop      1999/04/14                                     %end date (yyyy-mm-dd)
+db_root        /home/meso/rwx_archive/                         %local path to climate database root /run/media/meso/data/rwx_clim_archive/
+date_start     1999/01/01                                      %start date (yyyy-mm-dd)
+date_stop      2010/12/31                                      %end date (yyyy-mm-dd)
 time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
 time_max       23:59                                           %oldest time in each day to accept a cell (HH:MM)
 month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers
@@ -18,17 +18,17 @@ transform_new  0                                               %flag to force tr
 %
 data_type      mesh                                            %data type to use from database, (mesh,posh,dbz,g_vil,tops_h,sts_h)
 %
-stat_min       nan                                             %lower limits for filtering stats data (data units, nan for no limit)
-stat_max       nan                                             %upper limit for filtering stats data (data units, nan for no limit)
+data_min       nan                                              %lower limits for filtering data_type (data units, nan for no limit)
+data_max       nan                                             %upper limit for filtering stats data (data units, nan for no limit)
 min_track      2                                               %minimum number of cells in a track to analyse (n. cells), min of 2
 ci_flag        0                                               %flag to only keep centroids for ci events
 ce_flag        0                                               %flag to only keep centroids for ce events
 ce_diff        8                                               %different between tn1 and tn cells for ce event (data units)
 centroid_grid  0.1											   %grid size for centroid accumulation (degrees)
-annual_flag    1                                               %normalise by number of rain years
+rainyr_flag    1                                               %normalise by number of rain years (flag)
+rain_yr_start  6                                               %rain year starting month (month number)
 grid_max       nan                                             %max value in output grid (data units, nan for no limit)
 data_range     250                                             %filter distance from radar to storm centroid (km)
-stormh5_min    nan                                             %lower limits for filtering stormh5 data (data units, nan for no limit)
 %
 map_config_fn  map.sydney.config
 ge_flag        1                                               %output ge
