--- a/rwx_climate/etc/map.sydney.config
+++ b/rwx_climate/etc/map.sydney.config
@@ -9,10 +9,10 @@
 fig_w                   700
 fig_h                   700
 %
-map_N_lat               -31.5
-map_S_lat               -35.5
-map_E_lon               153.5  
-map_W_lon               148.5
+map_N_lat               -32.8
+map_S_lat               -35
+map_E_lon               152.3 
+map_W_lon               150
 %  
 lat_label_int           1
 lon_label_int           1
@@ -38,20 +38,28 @@ topo_ffn                /run/media/meso/DATA/mapping/srtm_67_19_Sydney/srtm_67_1
 topo_filter             1
 topo_filter_sz          500
 topo_resize             1
-topo_scale              0.02
+topo_scale              0.05
 topo_min                200
 topo_step               200
 topo_max                1000
-topo_linewidth          2
+topo_linewidth          1
+topo_linecolor          [0.3,0.3,0.3]
 %
 draw_cities             1
 cities_names            {'Sydney','Wollongong'}
-cities_lat              [-27.46,-27.56]
-cities_lon              [153.02,153.00]
-cities_horz_align       {'right','right'}
+cities_lat              [-33.865,-34.433]
+cities_lon              [151.209,150.883]
+cities_horz_align       {'left','left'}
 cities_vert_align       {'top','top'}
 cities_fontsize         [14,14]
+cities_marksize         [5,5]
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-colorbar_label         10km_Centroid_Density
+colorbar_label          Frequency
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+draw_streamliners       1
+stream_linewith         1.5
+stream_linecolor        [0.6,0.6,0.6]
