sns sqs system for realtime data feeds

--- a/etc/global.config
+++ b/etc/global.config
@@ -77,6 +77,11 @@ odimh5_ddb_table      wxradar_odimh5_index
 storm_ddb_table       wxradar_stormh5_index
 eraint_ddb_table      wxradar_eraint_fzlvl
 clean_stormobj_index  0                         %checks stormobj_index for sort_ids and removed these entries
-staging_ddb_table     wxradar_realtime_staging
 %pushover
 pushover_flag         1
+%SNS arn
+sns_odimh5_prep       arn:aws:sns:ap-southeast-2:979317741916:weather_realtime_odimh5_prep
+sns_odimh5_process    arn:aws:sns:ap-southeast-2:979317741916:weather_realtime_odimh5_process
+%SQS url
+sqs_odimh5_prep       https://sqs.ap-southeast-2.amazonaws.com/979317741916/joshuasoderholm_weather_realtime_odimh5_prep
+sqs_odimh5_process    https://sqs.ap-southeast-2.amazonaws.com/979317741916/joshuasoderholm_weather_realtime_odimh5_process
