changed to gtopo30

--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -3,8 +3,8 @@
 %----------climate.m config file
 %
 %---------------------------------------------------------
-radar_id       03                                              %radar id for climate analysis
-db_root        /home/meso/rwx_archive/                         %local path to climate database root /run/media/meso/data/rwx_clim_archive/
+radar_id       02                                              %radar id for climate analysis
+db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root /run/media/meso/data/rwx_clim_archive/
 date_start     1999/01/01                                      %start date (yyyy-mm-dd)
 date_stop      2010/12/31                                      %end date (yyyy-mm-dd)
 time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
@@ -18,7 +18,7 @@ transform_new  0                                               %flag to force tr
 %
 data_type      mesh                                            %data type to use from database, (mesh,posh,dbz,g_vil,tops_h,sts_h)
 %
-data_min       nan                                              %lower limits for filtering data_type (data units, nan for no limit)
+data_min       15                                              %lower limits for filtering data_type (data units, nan for no limit)
 data_max       nan                                             %upper limit for filtering stats data (data units, nan for no limit)
 min_track      2                                               %minimum number of cells in a track to analyse (n. cells), min of 2
 ci_flag        0                                               %flag to only keep centroids for ci events
@@ -30,7 +30,7 @@ rain_yr_start  6                                               %rain year starti
 grid_max       nan                                             %max value in output grid (data units, nan for no limit)
 data_range     250                                             %filter distance from radar to storm centroid (km)
 %
-map_config_fn  map.sydney.config
+map_config_fn  map.melbourne.config
 ge_flag        1                                               %output ge
 geotiff_flag   1                                               %output geotiff
 image_flag     1											   %output image
