--- a/rwx_climate/etc/map.brisbane.config
+++ b/rwx_climate/etc/map.brisbane.config
@@ -34,15 +34,13 @@ coast_ffn               /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
 state_id                3
 %
 draw_topo               1
-topo_ffn                /run/media/meso/DATA/mapping/srtm_67_18_Brisbane/srtm_67_18.tif
-topo_filter             1
-topo_filter_sz          1000
-topo_resize             1
-topo_scale              0.025
+topo_ffn                /run/media/meso/DATA/mapping/AUS_gtopo30
+topo_resample           3
 topo_min                200
 topo_step               200
 topo_max                1000
-topo_linewidth          2
+topo_linewidth          1
+topo_linecolor          [0.3,0.3,0.3]
 %
 draw_cities             1
 cities_names            {'Brisbane__','Archerfield__'}
