--- a/rwx_climate/etc/map.sydney.config
+++ b/rwx_climate/etc/map.sydney.config
@@ -34,11 +34,8 @@ coast_ffn               /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
 state_id                1
 %
 draw_topo               1
-topo_ffn                /run/media/meso/DATA/mapping/srtm_67_19_Sydney/srtm_67_19.tif
-topo_filter             1
-topo_filter_sz          500
-topo_resize             1
-topo_scale              0.05
+topo_ffn                /run/media/meso/DATA/mapping/AUS_gtopo30
+topo_resample           3
 topo_min                200
 topo_step               200
 topo_max                1000
