starting work on kml renderer

--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -1,40 +1,45 @@
-%---------------------------------------------------------
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% climate.m primary configuration file
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Joshua Soderholm, March 2017
+% Fugro ROAMES
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%----------climate.m config file
+% Site
 %
-%---------------------------------------------------------
 radar_id       02                                              %radar id for climate analysis
-db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root /run/media/meso/data/rwx_clim_archive/
-date_start     1999/01/01                                      %start date (yyyy-mm-dd)
-date_stop      2010/12/31                                      %end date (yyyy-mm-dd)
-time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
-time_max       23:59                                           %oldest time in each day to accept a cell (HH:MM)
-month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers
-date_list_flag 0
-date_list_ffn  data/sb_data/arch_sb_days.mat                   %second date list to filter primary (must contain matlab dates rounded)
-date_list_var  target_days                                     %date_list variable name
-financial_year 1                                               %use finanical years for annual normalisation
 transform_new  0                                               %flag to force transform regeneration
 %
-data_type      mesh                                            %data type to use from database, (mesh,posh,dbz,g_vil,tops_h,sts_h)
+% Temporal
 %
-data_min       15                                              %lower limits for filtering data_type (data units, nan for no limit)
+date_start     1999/01/01                                      %start date (yyyy-mm-dd)
+date_stop      2016/12/31                                      %end date (yyyy-mm-dd)
+time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
+time_max       23:59                                           %oldest time in each day to accept a cell (HH:MM)
+month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers (vec)
+date_list_flag 0                                               %flag to use date_list (flag)
+date_list_var  target_days                                     %date_list variable name (str)
+rainyr_flag    1                                               %normalise by number of rain years (flag)
+rain_yr_start  6                                               %rain year starting month (month number)
+%
+% Spatial
+%
+centroid_grid  0.1											   %grid size for centroid accumulation (degrees)
+data_range     250                                             %filter distance from radar to storm centroid (km)
+%
+% Data processing
+%
+data_type      mesh                                            %data type to use from database, (mesh,posh,dbz,g_vil,tops_h,sts_h)
+data_min       20                                              %lower limits for filtering data_type (data units, nan for no limit)
 data_max       nan                                             %upper limit for filtering stats data (data units, nan for no limit)
 min_track      2                                               %minimum number of cells in a track to analyse (n. cells), min of 2
 ci_flag        0                                               %flag to only keep centroids for ci events
 ce_flag        0                                               %flag to only keep centroids for ce events
 ce_diff        8                                               %different between tn1 and tn cells for ce event (data units)
-centroid_grid  0.1											   %grid size for centroid accumulation (degrees)
-rainyr_flag    1                                               %normalise by number of rain years (flag)
-rain_yr_start  6                                               %rain year starting month (month number)
-grid_max       nan                                             %max value in output grid (data units, nan for no limit)
-data_range     250                                             %filter distance from radar to storm centroid (km)
+%
+% Paths
 %
 map_config_fn  map.melbourne.config
-ge_flag        1                                               %output ge
-geotiff_flag   1                                               %output geotiff
-image_flag     1											   %output image
-db_out         1                                               %output simply database
+db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root /run/media/meso/data/rwx_clim_archive/
+date_list_ffn  data/sb_data/arch_sb_days.mat                   %second date list to filter primary (must contain matlab dates rounded)
 out_root       /home/meso/rwx_climate/                         %output path for climate products
-
-
