--- a/rwx_climate/etc/map.brisbane.config
+++ b/rwx_climate/etc/map.brisbane.config
@@ -5,7 +5,8 @@
 % Fugro ROAMES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% map layout config
+% image map layout config
+%
 fig_w                   700
 fig_h                   700
 %
@@ -25,9 +26,7 @@ lon_grid_res            0.5
 %
 label_fontsize          10
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% layers
+% image layers
 %
 draw_coast              1
 coast_ffn               /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
@@ -50,5 +49,31 @@ cities_horz_align       {'right','right'}
 cities_vert_align       {'top','top'}
 cities_fontsize         [14,14]
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-colorbar_label         Hailstorm_(20mm)_10km_Centroid_Density
+draw_silence            1
+silence_radius          8 %km
+silence_face_color      [0.5,0.5,0.5]
+silence_edge_color      [0,0,0]
+silence_line_width      1
+%
+draw_site               1
+site_marker_size        6
+%
+draw_range_rings        1
+range_ring_radius       [50,100] %km
+rr_edge_color           [0,0,0]
+rr_line_width           1
+%
+% image colour bar
+%
+colorbar_label         Frequency
+%
+% image streamliners
+%
+draw_streamliners       1
+stream_linewith         1.5
+stream_linecolor        [0.6,0.6,0.6]
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% kml options
+%
